--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ leptos_meta = {version = "0.2", features = ["csr"]}
 log = "0.4"
 simple_logger = "4"
 wasm-bindgen = "0.2"
+regex = "1.8.1"
+lazy_static = "1.4.0"
 
