--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ simple_logger = "4"
 wasm-bindgen = "0.2"
 regex = "1.8.1"
 lazy_static = "1.4.0"
-
+gloo-net = {version = "0.2.6", features = ["http"]}
