--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 # will have compiled files and executables
 /target/
 /dist/
+/public/
 /.log/
 /.firebase/
 /.github/workflows/
+/style/
 
 Cargo.lock
 pkg
@@ -18,3 +20,4 @@ test-results/
 end2end/playwright-report/
 playwright/.cache/
 
+firebase-debug.log
