--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ wasm-bindgen = "0.2"
 regex = "1.8.1"
 lazy_static = "1.4.0"
 gloo-net = {version = "0.2.6", features = ["http"]}
-web-sys = {version = "0.3.61", features = ["MouseEvent", "Event", "EventTarget", "HtmlElement", "CssStyleDeclaration", "Element", "DomRect"]}
+web-sys = {version = "0.3.61", features = ["MouseEvent", "Event", "EventTarget", "HtmlElement", "CssStyleDeclaration", "Element", "DomRect", "MediaQueryList"]}
